--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -1,27 +1,25 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-    <header class="popup-form__callout-box">
+    <header class="base-form__callout-box">
         {{#if problems.targeting}}
-            <div class="popup-form__callout popup-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.TargetPower"}}</div>
+            <div class="base-form__callout base-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.TargetPower"}}</div>
         {{/if}}
         {{#if problems.power}}
-            <div class="popup-form__callout popup-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.InsufficientPower" cost=item.system.cost actorPower=item.actor.system.power.value}}</div>
+            <div class="base-form__callout base-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.InsufficientPower" cost=item.system.cost actorPower=item.actor.system.power.value}}</div>
         {{/if}}
     </header>
     <div class="popup-form__main">
-        <!-- Warnings -->
-        
-        <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
+        <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
         
         {{#if item.system.description}}
         <div class="popup-form__content popup-form__content--description">
-            <div class="popup-form__header">{{item.actor.name}}</div> 
+            <div class="base-form__header">{{item.actor.name}}</div> 
             {{{item.system.description}}}
         </div>
         {{/if}}
 
         {{#if item.system.roll}}
         <div class="popup-form__section">
-            <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
+            <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
             <div class="popup-form__group">
                 <div class="popup-form__row">
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
@@ -51,14 +49,14 @@
 
         {{#if item.system.prerequisites}}
         <div class="popup-form__section">
-            <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites"}}</div>
+            <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites"}}</div>
             <div class="popup-form__content popup-form__content--data">{{item.system.prerequisites}}</div>
         </div>
         {{/if}}
 
         {{#if item.system.usageInfo}}
         <div class="popup-form__section popup-form__section--usage">
-            <div class="popup-form__header popup-form__header--usage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UsageInfo"}}</div>
+            <div class="base-form__header popup-form__header--usage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UsageInfo"}}</div>
             <div class="popup-form__content popup-form__content--usage">{{item.system.usageInfo}}</div>
         </div>
         {{/if}}
