--- a/templates/macros/popups/status-popup.hbs
+++ b/templates/macros/popups/status-popup.hbs
@@ -18,14 +18,14 @@
         <div class="popup-form__effects">
             <div class='popup-form__effects--title'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
             {{#each effects}}
-                <div class="popup-form__effects--name">
+                <div class="base-form__effects--name">
                     <img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}
                 </div>
                 {{#ifCond this.changes.length ">" 0 }}
                 {{#each this.changes}}
-                    <div class="popup-form__effects--row">
-                        <div class="popup-form__effects--row-cell popup-form__effects--row-cell--first">{{keySplit this.key 2}}</div> 
-                        <div class="popup-form__effects--row-cell popup-form__effects--row-cell--middle">
+                    <div class="base-form__effects--row">
+                        <div class="base-form__effects--row-cell base-form__effects--row-cell--first">{{keySplit this.key 2}}</div> 
+                        <div class="base-form__effects--row-cell base-form__effects--row-cell--middle">
                             {{#ifCond this.mode "===" 5}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}{{/ifCond}}
                             {{#ifCond this.mode "!==" 5}}
                             {{#ifCond (keySplit this.key 4) "===" "advantage"}}
@@ -39,7 +39,7 @@
                             {{/ifCond}}
                             {{/ifCond}}
                         </div>
-                        <div class="popup-form__effects--row-cell popup-form__effects--row-cell--last">{{this.value}}</div>
+                        <div class="base-form__effects--row-cell base-form__effects--row-cell--last">{{this.value}}</div>
                     </div>
                 {{/each}}
                 {{/ifCond}}
