--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
-.protest-revolution-regular, .initiative-actor-name, .initiative-value, .chat-card__header, .chat-card__effects--title, .base-form__effects--title, .popup-form__effects--title {
+.protest-revolution-regular, .initiative-actor-name, .initiative-value, .chat-card__header, .base-form__effects--title, .popup-form__effects--title, .chat-card__effects--title {
   font-family: "Protest Revolution", serif;
   font-weight: 400;
   font-style: normal;
@@ -13,7 +13,7 @@
   font-style: normal;
 }
 
-.underdog-regular, .chat-card__description, .chat-card__effects, .base-form__description, .base-form__effects, .popup-form__effects {
+.underdog-regular, .chat-card__description, .base-form__description, .base-form__effects, .popup-form__effects, .chat-card__effects {
   font-family: "Underdog", serif;
   font-weight: 400;
   font-style: normal;
@@ -519,27 +519,27 @@
   background-color: var(--eventide-rp-system-abilities-wits);
 }
 
-.base-form, .gear-creator, .popup-form {
+.base-form, .gear-creator, .popup-form, .chat-card {
   overflow-y: auto;
   -ms-overflow-style: initial;
   scrollbar-width: thin;
   scrollbar-color: var(--eventide-rp-system-input-focus) transparent;
   margin: 0.5rem;
 }
-.base-form::-webkit-scrollbar, .gear-creator::-webkit-scrollbar, .popup-form::-webkit-scrollbar {
+.base-form::-webkit-scrollbar, .gear-creator::-webkit-scrollbar, .popup-form::-webkit-scrollbar, .chat-card::-webkit-scrollbar {
   width: 6px;
   background-color: transparent;
   display: block;
 }
-.base-form::-webkit-scrollbar-thumb, .gear-creator::-webkit-scrollbar-thumb, .popup-form::-webkit-scrollbar-thumb {
+.base-form::-webkit-scrollbar-thumb, .gear-creator::-webkit-scrollbar-thumb, .popup-form::-webkit-scrollbar-thumb, .chat-card::-webkit-scrollbar-thumb {
   background-color: var(--eventide-rp-system-input-focus);
   border-radius: 10px;
   border: 1px solid var(--eventide-rp-system-input-bg);
 }
-.base-form::-webkit-scrollbar-thumb:hover, .gear-creator::-webkit-scrollbar-thumb:hover, .popup-form::-webkit-scrollbar-thumb:hover {
+.base-form::-webkit-scrollbar-thumb:hover, .gear-creator::-webkit-scrollbar-thumb:hover, .popup-form::-webkit-scrollbar-thumb:hover, .chat-card::-webkit-scrollbar-thumb:hover {
   background-color: var(--eventide-rp-system-primary-button-hover);
 }
-.base-form::-webkit-scrollbar-track, .gear-creator::-webkit-scrollbar-track, .popup-form::-webkit-scrollbar-track {
+.base-form::-webkit-scrollbar-track, .gear-creator::-webkit-scrollbar-track, .popup-form::-webkit-scrollbar-track, .chat-card::-webkit-scrollbar-track {
   background-color: transparent;
   margin: 0;
 }
@@ -590,14 +590,14 @@
   text-align: justify;
   font-style: italic;
 }
-.base-form__effects, .popup-form__effects {
+.base-form__effects, .popup-form__effects, .chat-card__effects {
   text-align: justify;
   font-size: 0.7rem;
   padding: 0rem;
   color: var(--eventide-rp-system-chat-card-white);
   background-color: var(--eventide-rp-system-form-content-bg);
 }
-.base-form__effects--title, .popup-form__effects--title {
+.base-form__effects--title, .popup-form__effects--title, .chat-card__effects--title {
   text-align: justify;
   font-size: 0.8rem;
   padding: 0.01rem;
@@ -607,32 +607,32 @@
   background-color: var(--eventide-rp-system-card-header-effect);
   color: var(--eventide-rp-system-chat-card-white);
 }
-.base-form__effects--name {
+.base-form__effects--name, .chat-card__effects--name {
   font-weight: bolder;
   color: var(--eventide-rp-system-chat-card-white);
   font-size: 0.75rem;
 }
-.base-form__effects--row {
+.base-form__effects--row, .chat-card__effects--row {
   padding-left: 20px;
   display: grid;
   grid-column: span 3/span 3;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   width: 50%;
 }
-.base-form__effects--row-cell {
+.base-form__effects--row--cell, .chat-card__effects--row--cell {
   padding-left: 3px;
   padding-right: 3px;
   border-bottom: 1px dashed var(--eventide-rp-system-chat-card-tan);
 }
-.base-form__effects--row-cell--first, .base-form__effects--row-cell--last {
+.base-form__effects--row--cell--first, .chat-card__effects--row--cell--first, .chat-card__effects--row--cell--last, .base-form__effects--row--cell--last {
   font-weight: bold;
 }
-.base-form__effects--row-cell--last {
+.base-form__effects--row--cell--last, .chat-card__effects--row--cell--last {
   border-left: 1px dashed var(--eventide-rp-system-chat-card-tan);
   padding-left: 15px;
   white-space: nowrap;
 }
-.base-form__effects--row-cell--middle {
+.base-form__effects--row--cell--middle, .chat-card__effects--row--cell--middle {
   font-style: italic;
 }
 .base-form__group, .popup-form__group {
@@ -970,7 +970,7 @@
 .base-form__sheet-tab-editor {
   height: 100%;
 }
-.base-form[style*="display: none"], [style*="display: none"].gear-creator, [style*="display: none"].popup-form {
+.base-form[style*="display: none"], [style*="display: none"].gear-creator, [style*="display: none"].popup-form, [style*="display: none"].chat-card {
   display: none;
 }
 
@@ -1219,11 +1219,8 @@
   opacity: 0.6;
 }
 .chat-card__effects {
-  text-align: justify;
-  font-size: 0.7rem;
-  padding: 0;
-  margin: 0;
   color: var(--eventide-rp-system-chat-card-tan);
+  background-color: var(--eventide-rp-system-chat-card-white);
 }
 .chat-card__effects--ac-check {
   border: 3px dashed var(--eventide-rp-system-hidden-border);
@@ -1233,16 +1230,6 @@
   margin: 0 3px;
   margin-top: 5px;
 }
-.chat-card__effects--title {
-  text-align: justify;
-  font-size: 0.8rem;
-  padding: 0.01rem;
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
-  margin-bottom: 3px;
-  background-color: var(--eventide-rp-system-card-header-effect);
-  color: var(--eventide-rp-system-chat-card-white);
-}
 .chat-card__effects--hit {
   background-color: var(--eventide-rp-system-chat-details-hit);
   color: white;
@@ -1250,6 +1237,7 @@
   padding: 0.0875rem;
   font-size: 0.7rem;
   margin-bottom: 0px;
+  border-radius: 5px;
   border: 1px solid var(--eventide-rp-system-chat-card-white);
 }
 .chat-card__effects--miss {
@@ -1259,35 +1247,11 @@
   padding: 0.0875rem;
   font-size: 0.7rem;
   margin-bottom: 0px;
+  border-radius: 5px;
   border: 1px solid var(--eventide-rp-system-chat-card-white);
 }
 .chat-card__effects--name {
-  font-weight: bolder;
   color: var(--eventide-rp-system-chat-card-black);
-  font-size: 0.75rem;
-}
-.chat-card__effects--row {
-  padding-left: 20px;
-  display: grid;
-  grid-column: span 3/span 3;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  width: 50%;
-}
-.chat-card__effects--row-cell {
-  padding-left: 3px;
-  padding-right: 3px;
-  border-bottom: 1px dashed var(--eventide-rp-system-chat-card-tan);
-}
-.chat-card__effects--row-cell--first, .chat-card__effects--row-cell--last {
-  font-weight: bold;
-}
-.chat-card__effects--row-cell--last {
-  border-left: 1px dashed var(--eventide-rp-system-chat-card-tan);
-  padding-left: 15px;
-  white-space: nowrap;
-}
-.chat-card__effects--row-cell--middle {
-  font-style: italic;
 }
 .chat-card__image--primary {
   width: 150px;
